<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/euro2016_background"
    android:id="@+id/layout_activity_login">

    <LinearLayout
        android:id="@+id/ll_login_input_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/et_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:background="#33ffffff"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_username"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#33ffffff"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_password"
            android:maxLines="1" />

        <RelativeLayout
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/bt_login"
            android:background="@android:drawable/btn_default">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_centerInParent="true" />

            <ProgressBar
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/progressBar_login"
                android:visibility="visible"/>

        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-160dp"
        android:layout_above="@id/ll_login_input_fields"
        android:adjustViewBounds="true"
        android:src="@drawable/euro2016logo_white_pos"
        android:contentDescription="@string/n_a" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:visibility="invisible"
        android:padding="8dp"
        android:background="#00ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>