<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/euro2016_background"
    android:padding="@dimen/activity_horizontal_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".view.LoginActivity">

    <EditText
        android:padding="8dp"
        android:background="#33ffffff"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password_login"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/hint_password"/>

    <EditText
        android:padding="8dp"
        android:background="#33ffffff"
        android:gravity="center"
        android:layout_above="@id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_username_login"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_username" />

    <RelativeLayout
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/bt_login"
        android:background="@android:drawable/btn_default">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_centerInParent="true" />

        <ProgressBar
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/progressBar_login"
            android:visibility="visible"/>

    </RelativeLayout>

    <TextView
        android:padding="8dp"
        android:background="#00ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_signup"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
